Fix bug in signout when idle too long. Minor conditional rendering changes i meetups.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,6 +65,7 @@ body {
   color: #7f7f7f;
   border: none;
   border-radius: 100px;
+  box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.2);
 }
 
 .input__large--margin {
